# cpp-play

./: .gitignore  CMakeLists.txt  LICENSE  README.md  apple-clang-m2-no-generation.txt  apple-clang-m2.txt  benchmark-01.txt  benchmark-02.txt  benchmark-functionalplus-range.cc  benchmark-no-generation.cc  benchmark-talk.Rmd  benchmark-talk.qmd  check-1.cc  check-2.cc  custom.scss  functions.R  intersperse.cc  new-in-initializers.cc  trivially-copyable-test.cc  type_name.hh
